Update 연간 고객 방문데이터.ipynb

--- a/m2_분석라이브러리활용/numpy/연간 고객 방문데이터.ipynb
+++ b/m2_분석라이브러리활용/numpy/연간 고객 방문데이터.ipynb
@@ -1153,7 +1153,7 @@
    ],
    "source": [
     "GD = insite_df.groupby(['Grade_20', 'Grade_21'])\n",
-    "list(GD)"
+    "list(GD).head()"
    ]
   },
   {
